updating portfolio with latest work and skills

--- a/src/styles/import.scss
+++ b/src/styles/import.scss
@@ -10,9 +10,11 @@
 @import "./containers/work";
 @import "./containers/play";
 @import "./containers/contact";
+@import "./containers/skills";
 
 @import "./components/menu/menu";
 @import "./components/menu/slideout";
 @import "./components/map/map";
 @import "./components/icons/icon";
 @import "./components/work/workItem";
+@import "./components/work/skill";
