--- a/src/styles/components/work/workItem.scss
+++ b/src/styles/components/work/workItem.scss
@@ -19,6 +19,12 @@
 
 		.project_svg {
 			width: 100px;
+			height: 100px;
+
+			svg {
+				width: 100%;
+				height: 100%;
+			}
 		}
 
 		.project_description {
